отрефакторил тесты в profile[bk-31]